tests/cases/ok/imports_math.p4
import imports_values

def square(x: int) -> int:
    return x * x + seed
