tests/cases/fail/string_equality.p4
def bad() -> str:
    return "x" == "y"
